# naeshin-engine

./: .gitignore  README.md  pyproject.toml
naeshin_engine/: __init__.py  extract_ebs.py  extract_mock_exam.py  extract_passages.py  font_setup.py  ko_spacing.py  ko_spacing_core.py  make_exam_pdf.py  make_pdf.py  make_vocab_pdf.py
naeshin_engine/rules/: analysis_rules.md  exam_rules.md  vocab_rules.md
tests/: test_exam_underline.py  test_golden.py  test_ko_spacing.py  test_make_pdf_highlights.py  test_rules_package.py
