[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "naeshin-engine"
version = "1.4.0"            # git 태그로 관리 (릴리스 시 수동 bump) · 1.2.0 분석·단어 규칙 · 1.3.0 공백정리+PDF 빌더 · 1.3.1 단어 환각 방지 · 1.4.0 지칭문제 지문 자동 밑줄
description = "naeshin 내신자료 추출 엔진 — auto/studio 공유 단일 원본"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "pymupdf>=1.23",
    "kiwipiepy>=0.17",
    "reportlab>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
packages = ["naeshin_engine"]

[tool.setuptools.package-data]
naeshin_engine = ["rules/*.md"]   # 출제 규칙 단일 소스 (auto·studio 공유) — wheel/sdist 포함
